results/SVCOMP/4-shot/log-ExSymExeLCMP-2024_03_18_21_57_28.txt
class Main {

  //@ ensures \result == test(x, 5);
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > Long.MIN_VALUE && x < Long.MAX_VALUE;
  //@ ensures \result == (x + 1 <= x + 2);
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:3: error: non-static method test(long,long) cannot be referenced from a static context
  //@ ensures \result == test(x, 5);
                         ^
1 error

